--- a/package.json
+++ b/package.json
@@ -14,7 +14,21 @@
     "@google/genai": "^1.34.0",
     "lucide-react": "^0.561.0",
     "recharts": "^3.6.0",
-    "@supabase/supabase-js": "2"
+    "@supabase/supabase-js": "2",
+    "codemirror": "6.0.1",
+    "@codemirror/view": "6.0.0",
+    "@codemirror/state": "6.0.0",
+    "@codemirror/language": "6.0.0",
+    "@codemirror/commands": "6.0.0",
+    "@codemirror/theme-one-dark": "6.0.0",
+    "@codemirror/lang-javascript": "6.0.0",
+    "@codemirror/lang-python": "6.0.0",
+    "@codemirror/lang-html": "6.0.0",
+    "@codemirror/lang-css": "6.0.0",
+    "@codemirror/lang-sql": "6.0.0",
+    "@codemirror/lang-json": "6.0.0",
+    "@codemirror/lang-markdown": "6.0.0",
+    "@codemirror/lang-rust": "6.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
