--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "@google/genai": "^1.34.0",
-    "lucide-react": "^0.561.0",
-    "recharts": "^3.6.0",
-    "@supabase/supabase-js": "2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "@google/genai": "1.34.0",
+    "lucide-react": "0.460.0",
+    "recharts": "2.13.3",
+    "@supabase/supabase-js": "2.46.1",
     "codemirror": "6.0.1",
-    "@codemirror/view": "6.0.0",
-    "@codemirror/state": "6.0.0",
-    "@codemirror/language": "6.0.0",
-    "@codemirror/commands": "6.0.0",
-    "@codemirror/theme-one-dark": "6.0.0",
-    "@codemirror/lang-javascript": "6.0.0",
-    "@codemirror/lang-python": "6.0.0",
-    "@codemirror/lang-html": "6.0.0",
-    "@codemirror/lang-css": "6.0.0",
-    "@codemirror/lang-sql": "6.0.0",
-    "@codemirror/lang-json": "6.0.0",
-    "@codemirror/lang-markdown": "6.0.0",
-    "@codemirror/lang-rust": "6.0.0"
+    "@codemirror/view": "6.34.1",
+    "@codemirror/state": "6.4.1",
+    "@codemirror/language": "6.10.3",
+    "@codemirror/commands": "6.7.1",
+    "@codemirror/theme-one-dark": "6.1.2",
+    "@codemirror/lang-javascript": "6.2.2",
+    "@codemirror/lang-python": "6.1.6",
+    "@codemirror/lang-html": "6.4.9",
+    "@codemirror/lang-css": "6.3.1",
+    "@codemirror/lang-sql": "6.8.0",
+    "@codemirror/lang-json": "6.0.1",
+    "@codemirror/lang-markdown": "6.3.1",
+    "@codemirror/lang-rust": "6.0.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
