--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@codemirror/state": "6.4.1",
     "@codemirror/language": "6.10.3",
     "@codemirror/commands": "6.7.1",
+    "@codemirror/search": "6.5.6",
+    "@codemirror/autocomplete": "6.18.3",
     "@codemirror/theme-one-dark": "6.1.2",
     "@codemirror/lang-javascript": "6.2.2",
     "@codemirror/lang-python": "6.1.6",
