--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "@google/genai": "1.34.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "lucide-react": "0.460.0",
     "recharts": "2.13.3",
+    "@google/genai": "1.34.0",
     "@supabase/supabase-js": "2.46.1",
     "codemirror": "6.0.1",
     "@codemirror/view": "6.34.1",
