--- a/package.json
+++ b/package.json
@@ -15,22 +15,20 @@
     "recharts": "2.13.3",
     "@google/genai": "1.34.0",
     "@supabase/supabase-js": "2.46.1",
-    "codemirror": "6.0.1",
-    "@codemirror/view": "6.34.1",
-    "@codemirror/state": "6.4.1",
-    "@codemirror/language": "6.10.3",
-    "@codemirror/commands": "6.7.1",
-    "@codemirror/search": "6.5.6",
-    "@codemirror/autocomplete": "6.18.3",
-    "@codemirror/theme-one-dark": "6.1.2",
-    "@codemirror/lang-javascript": "6.2.2",
-    "@codemirror/lang-python": "6.1.6",
-    "@codemirror/lang-html": "6.4.9",
-    "@codemirror/lang-css": "6.3.1",
-    "@codemirror/lang-sql": "6.8.0",
-    "@codemirror/lang-json": "6.0.1",
-    "@codemirror/lang-markdown": "6.3.1",
-    "@codemirror/lang-rust": "6.0.1"
+    "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/view": "^6.39.4",
+    "codemirror": "^6.0.2",
+    "@codemirror/lang-html": "^6.4.11",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/search": "^6.5.11",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@codemirror/lang-css": "^6.3.1",
+    "@codemirror/lang-markdown": "^6.5.0",
+    "@codemirror/commands": "^6.10.1",
+    "@codemirror/lang-sql": "^6.10.0",
+    "@codemirror/lang-python": "^6.2.1",
+    "@codemirror/lang-rust": "^6.0.2",
+    "@codemirror/lang-javascript": "^6.2.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
