--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
+
 {
   "name": "first-projects-connect",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.2.8",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "lucide-react": "0.460.0",
-    "recharts": "2.13.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "lucide-react": "^0.460.0",
+    "recharts": "^2.13.3",
     "@google/genai": "1.34.0",
-    "@supabase/supabase-js": "2.46.1",
-    "@codemirror/lang-json": "^6.0.2",
-    "@codemirror/view": "^6.39.4",
+    "@supabase/supabase-js": "^2.46.1",
     "codemirror": "^6.0.2",
-    "@codemirror/lang-html": "^6.4.11",
-    "@codemirror/state": "^6.5.2",
-    "@codemirror/search": "^6.5.11",
-    "@codemirror/theme-one-dark": "^6.1.3",
-    "@codemirror/lang-css": "^6.3.1",
-    "@codemirror/lang-markdown": "^6.5.0",
-    "@codemirror/commands": "^6.10.1",
-    "@codemirror/lang-sql": "^6.10.0",
-    "@codemirror/lang-python": "^6.2.1",
-    "@codemirror/lang-rust": "^6.0.2",
-    "@codemirror/lang-javascript": "^6.2.4"
+    "@codemirror/view": "^6.34.1",
+    "@codemirror/state": "^6.4.1",
+    "@codemirror/language": "^6.10.3",
+    "@codemirror/commands": "^6.7.1",
+    "@codemirror/search": "^6.5.6",
+    "@codemirror/theme-one-dark": "^6.1.2",
+    "@codemirror/lang-javascript": "^6.2.2",
+    "@codemirror/lang-python": "^6.1.6",
+    "@codemirror/lang-html": "^6.4.9",
+    "@codemirror/lang-css": "^6.3.0",
+    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/lang-sql": "^6.8.0",
+    "@codemirror/lang-rust": "^6.0.1",
+    "@codemirror/lang-markdown": "^6.3.1"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
+    "typescript": "^5.6.3",
+    "vite": "^6.0.0"
+  },
+  "overrides": {
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0"
   }
 }
