feat: Upgrade React to v19 and resolve dependency issues
Updates the project to use React v19. This includes updating dependencies in `package.json` and overriding `react` and `react-dom` to ensure correct versions are used.

The `index.html` error message has been updated to reflect the resolution of dependency conflicts and provide clearer instructions.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 {
   "name": "first-projects-connect",
   "private": true,
-  "version": "1.2.8",
+  "version": "1.2.9",
   "type": "module",
   "dependencies": {
     "react": "19.0.0",
@@ -34,6 +34,8 @@
     "vite": "^6.0.0"
   },
   "overrides": {
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0"
   }
