--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 {
   "name": "first-projects-connect",
   "private": true,
-  "version": "1.2.9",
+  "version": "1.3.0",
   "type": "module",
   "dependencies": {
     "react": "19.0.0",
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "typescript": "^5.6.3",
     "vite": "^6.0.0"
   },
