--- a/package.json
+++ b/package.json
@@ -1,36 +1,45 @@
-
 {
   "name": "first-projects-connect",
   "private": true,
   "version": "1.3.0",
   "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "lucide-react": "^0.460.0",
-    "recharts": "^2.13.3",
+    "@codemirror/commands": "^6.7.1",
+    "@codemirror/lang-css": "^6.3.0",
+    "@codemirror/lang-html": "^6.4.9",
+    "@codemirror/lang-javascript": "^6.2.2",
+    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/lang-markdown": "^6.3.1",
+    "@codemirror/lang-python": "^6.1.6",
+    "@codemirror/lang-rust": "^6.0.1",
+    "@codemirror/lang-sql": "^6.8.0",
+    "@codemirror/language": "^6.10.3",
+    "@codemirror/search": "^6.5.6",
+    "@codemirror/state": "^6.4.1",
+    "@codemirror/theme-one-dark": "^6.1.2",
+    "@codemirror/view": "^6.34.1",
     "@google/genai": "1.34.0",
     "@supabase/supabase-js": "^2.46.1",
     "codemirror": "^6.0.2",
-    "@codemirror/view": "^6.34.1",
-    "@codemirror/state": "^6.4.1",
-    "@codemirror/language": "^6.10.3",
-    "@codemirror/commands": "^6.7.1",
-    "@codemirror/search": "^6.5.6",
-    "@codemirror/theme-one-dark": "^6.1.2",
-    "@codemirror/lang-javascript": "^6.2.2",
-    "@codemirror/lang-python": "^6.1.6",
-    "@codemirror/lang-html": "^6.4.9",
-    "@codemirror/lang-css": "^6.3.0",
-    "@codemirror/lang-json": "^6.0.1",
-    "@codemirror/lang-sql": "^6.8.0",
-    "@codemirror/lang-rust": "^6.0.1",
-    "@codemirror/lang-markdown": "^6.3.1"
+    "lucide-react": "^0.460.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "recharts": "^2.13.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.6.3",
     "vite": "^6.0.0"
   },
