--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@codemirror/state": "^6.4.1",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/view": "^6.34.1",
-    "@google/genai": "1.34.0",
     "@supabase/supabase-js": "^2.46.1",
     "codemirror": "^6.0.2",
     "framer-motion": "^12.23.26",
@@ -32,6 +31,7 @@
     "lucide-react": "^0.460.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-router-dom": "^7.12.0",
     "recharts": "^2.13.3"
   },
   "devDependencies": {
