--- a/package.json
+++ b/package.json
@@ -24,15 +24,18 @@
     "@codemirror/state": "^6.4.1",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/view": "^6.34.1",
-    "@supabase/supabase-js": "^2.46.1",
+    "@supabase/supabase-js": "^2.96.0",
+    "clsx": "^2.1.1",
     "codemirror": "^6.0.2",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.26",
     "liquid-glass-react": "^1.1.1",
     "lucide-react": "^0.460.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-router-dom": "^7.12.0",
-    "recharts": "^2.13.3"
+    "react-router-dom": "^7.13.0",
+    "recharts": "^2.13.3",
+    "tailwind-merge": "^3.4.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
